VQ-2408-n-VQ-2410:: Systems and Scheduler Per System

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -223,7 +223,18 @@
     "confirm_delete": "Confirm delete",
     "are_you_sure": "Are you sure?",
     "cancel": "Cancel",
-    "delete": "Delete"
+    "delete": "Delete",
+    "job_name": "Job Name",
+    "job_description": "Job Description",
+    "job_type": "Job Type",
+    "execution_time": "Execution Time",
+    "repeat": "Repeat",
+    "notified_success_user": "Notified Success User",
+    "notified_failed_user": "Notilified Failed User",
+    "success_notify_template": "Success Notify Template",
+    "fail_notify_template": "Fail Notify Template",
+    "threshold_type": "Threshold Type",
+    "threshold_value": "Threshold Value"
   },
   "entities": {
     "account_number": "Account Number",
@@ -681,11 +692,11 @@
       "deductible_description": "Deductible description",
       "limitation_use": "Limitation use",
       "authorized_driver": "Authorized Driver",
-      "edit_Other_details":"Edit Other Details",
+      "edit_Other_details": "Edit Other Details",
       "third": "Third",
       "section_details": "Section Details",
       "risk_sections": "Risk Sections",
-      "edit_risk_section_details":"Edit Risk Section Details",
+      "edit_risk_section_details": "Edit Risk Section Details",
       "id": "ID",
       "rate_type": "Rate Type",
       "premium_type": "Premium Type",
@@ -709,11 +720,11 @@
       "editable": "Editable",
       "assign_task": "Assign task",
       "next": "Next",
-      "fixed":"Fixed",
-      "recursive":"Recursive",
-      "rate_table":"Rate Table",
-      "absolute_range":"Absolute Range",
-      "step_ranges":"Step Ranges"
+      "fixed": "Fixed",
+      "recursive": "Recursive",
+      "rate_table": "Rate Table",
+      "absolute_range": "Absolute Range",
+      "step_ranges": "Step Ranges"
     },
     "policy": {
       "underwriting_new_transaction": "Underwriting: New transaction",
@@ -869,95 +880,93 @@
       "premium": "Premium",
       "fee_rate": "Fee rate",
       "fee_amount": "Fee amount",
-
-      "import_schedule":"Import Schedule",
-      "from_csv_file":"From CSV File",
-      "from_another_policy":"From another policy",
-      "export_template":"Export template",
-      "upload_template":"Upload template",
-      "underwriting_policy_summary":"Underwriting:Policy Summary",
-
-      "client_dd_details":"Client DD details",
+      "client_dd_details": "Client DD details",
       "policy_taxes": "Policy taxes",
       "policy_clauses": "Policy clauses",
       "policy_subclasses_clauses": "Policy subclasses clauses",
       "policy_level_perils": "Policy level perils",
-      "policy_remarks":"Policy remarks",
-      "limits_of_liability":"Limits of liability",
+      "policy_remarks": "Policy remarks",
+      "limits_of_liability": "Limits of liability",
       "external_claim_exp": "External claims exp.",
       "internal_claim_exp": "Internal claims exp.",
       "service_providers": "Service providers",
       "reasons_for_pending": "Reasons for pending",
       "insureds": "Insureds",
-      "Name" : "Name",
+      "Name": "Name",
       "address": "Address",
       "town": "Town",
       "pin": "Pin",
       "passport_no": "Passport no.",
-      "business":"Business",
-      "risk-note":"Risk note",
-      "description":"Description",
-      "binder_name":"Binder name",
+      "business": "Business",
+      "risk-note": "Risk note",
+      "description": "Description",
+      "binder_name": "Binder name",
       "uw-year": "UW year",
       "Premium": "Premium",
-      "schedule_details":"Schedule details",
-      "reg_no":"Reg no.",
-      "vehicle_make":"Vehicle make",
-      "cubic_capacity":"Cubic capacity",
-      "year_of_manufacture":"Year of manufacture",
-      "seating_capacity":"Seating capacity",
-      "value":"Value",
-      "body_type":"Body type",
+      "schedule_details": "Schedule details",
+      "reg_no": "Reg no.",
+      "vehicle_make": "Vehicle make",
+      "cubic_capacity": "Cubic capacity",
+      "year_of_manufacture": "Year of manufacture",
+      "seating_capacity": "Seating capacity",
+      "value": "Value",
+      "body_type": "Body type",
       "premium_items": "Premium Items",
-      "risk_sections":"Risk Sections",
-      "save_details":"Save details",
-      "group":"Group",
-      "row_no":"Row No.",
+      "risk_sections": "Risk Sections",
+      "save_details": "Save details",
+      "group": "Group",
+      "row_no": "Row No.",
       "short_desc": "Short desc",
       "limit_amount": "Limit amount",
       "premium_rate": "Premium rate",
       "div_factor": "Div Factor",
-      "id":"ID",
+      "id": "ID",
       "rate_type": "Rate type",
       "premium_type": "Premium type",
       "free_limit": "Free limit",
-      "div_by":"Div By",
-      "multi_rate":"Multi rate",
-      "div-multi_by":"Div multi by",
+      "div_by": "Div By",
+      "multi_rate": "Multi rate",
+      "div-multi_by": "Div multi by",
       "min_premium": "Min premium",
       "accumulation": "Accumulation",
-      "remarks":"Remarks",
-      "declaration":"Declaration",
-      "compute":"Compute",
-      "dual_basis":"Dual basis",
+      "remarks": "Remarks",
+      "declaration": "Declaration",
+      "compute": "Compute",
+      "dual_basis": "Dual basis",
       "indemnity_period_units": "Indemnity period units",
-      "first_indemnity":"First indemnity",
+      "first_indemnity": "First indemnity",
       "indemnity_remainder_period": "Indemnity remainder period",
-      "email_pct":"Email pct",
-      "loc_division_factor":"Loc division factor",
-      "top_loc_rate":"Top loc rate",
-      "clear":"Clear",
-      "risk_clauses":"Risk clauses",
-      "header":"Header",
-      "clause":"Clause",
-      "editable":"Editable",
+      "email_pct": "Email pct",
+      "loc_division_factor": "Loc division factor",
+      "top_loc_rate": "Top loc rate",
+      "clear": "Clear",
+      "risk_clauses": "Risk clauses",
+      "header": "Header",
+      "clause": "Clause",
+      "editable": "Editable",
       "type": "Type",
-      "required_documents":"Required documents",
+      "required_documents": "Required documents",
       "submitted": "Submitted",
       "date-submitted": "Date Submitted",
-      "ref_no":"Ref no.",
-      
+      "ref_no": "Ref no.",
+
       "risk_note": "Risk note",
       "uw_year": "UW year",
 
-      "select_risk_clauses":"Select risk clauses",
-      "peril":"Peril",
-      "limit_description":"Limit description",
-      "person_limit":"Person limit",
-      "claim_amount":"Claim amount",
-      "excess_type":"Excess type",
-      "peril_id":"ID",
-      "previous":"Previous"
+      "select_risk_clauses": "Select risk clauses",
+      "peril": "Peril",
+      "limit_description": "Limit description",
+      "person_limit": "Person limit",
+      "claim_amount": "Claim amount",
+      "excess_type": "Excess type",
+      "peril_id": "ID",
+      "previous": "Previous",
+      "import_schedule": "Import Schedule",
+      "from_csv_file": "From CSV File",
+      "from_another_policy": "From another policy",
+      "export_template": "Export template",
+      "upload_template": "Upload template",
+      "underwriting_policy_summary": "Underwriting:Policy Summary"
     }
   },
   "lms": {
@@ -966,7 +975,7 @@
       "causation_cause": "Causation Cause",
       "causation_type": "Causation Type",
       "choose_file": "Choose File",
-      "claims" : "Claims",
+      "claims": "Claims",
       "claim_details": "Claim Details",
       "claim_on_life": "Claim on Life",
       "claim_type": "Claim Type",
@@ -1222,24 +1231,24 @@
       "authorizeDate": "Authorize date"
     },
     "eTims": {
-      "refNo":  "Ref no",
+      "refNo": "Ref no",
       "amountPosted": "Amount posted",
-      "datePosted":  "Date posted",
+      "datePosted": "Date posted",
       "timePosted": "Time posted",
-      "etimsStatus":  "Etims status",
+      "etimsStatus": "Etims status",
       "taxableAmountA": "Taxable amount A",
-      "taxableAmountB":  "Taxable amount B",
+      "taxableAmountB": "Taxable amount B",
       "taxableAmountC": "Taxable amount C",
-      "taxableAmountD":  "Taxable amount D",
+      "taxableAmountD": "Taxable amount D",
       "taxAmountA": "Tax amount A",
       "taxAmountB": "Tax amount B",
-      "taxAmountC":"Tax amount C",
+      "taxAmountC": "Tax amount C",
       "taxAmountD": "Tax amount D",
-      "taxRateA":"Tax rate A",
+      "taxRateA": "Tax rate A",
       "taxRateB": "Tax rate B",
-      "taxRateC":"Tax rate C",
+      "taxRateC": "Tax rate C",
       "taxRateD": "Tax rate D",
-      "errorMessage":"Error message",
+      "errorMessage": "Error message",
       "postToEtims": "Post to Etims",
       "debitNote": "Debit note"
     },
@@ -1361,8 +1370,6 @@
       "ownShare": "Own share",
       "revisionDate": "Revision date",
       "revisionRemarks": "Revision remarks"
-
-
     }
   },
   "fms": {
