VQ-2356:Ability to view eisk perils

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -740,6 +740,7 @@
       "mid_term_endorsement": "Mid-term endorsements",
       "is_the_policy_short_period": "Is the policy short period",
       "is_the_policy_renewable": "Is the policy renewable",
+      "other_insterested_parties":"Other interested parties",
       "is_it_a_new_client": "Is it a new Client",
       "cancel": "Cancel",
       "next": "Next",
