VQ-2467-n-VQ-2468:: Scheduler Creation Modal Modification

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -237,7 +237,9 @@
     "success_notify_template": "Success Notify Template",
     "fail_notify_template": "Fail Notify Template",
     "threshold_type": "Threshold Type",
-    "threshold_value": "Threshold Value"
+    "threshold_value": "Threshold Value",
+    "select_template": "Select Template",
+    "no_templates_found": "No Template Found"
   },
   "entities": {
     "account_number": "Account Number",
@@ -695,11 +697,11 @@
       "deductible_description": "Deductible description",
       "limitation_use": "Limitation use",
       "authorized_driver": "Authorized Driver",
-      "edit_Other_details":"Edit Other Details",
+      "edit_Other_details": "Edit Other Details",
       "third": "Third",
       "section_details": "Section Details",
       "risk_sections": "Risk Sections",
-      "edit_risk_section_details":"Edit Risk Section Details",
+      "edit_risk_section_details": "Edit Risk Section Details",
       "id": "ID",
       "rate_type": "Rate Type",
       "premium_type": "Premium Type",
@@ -723,11 +725,11 @@
       "editable": "Editable",
       "assign_task": "Assign task",
       "next": "Next",
-      "fixed":"Fixed",
-      "recursive":"Recursive",
-      "rate_table":"Rate Table",
-      "absolute_range":"Absolute Range",
-      "step_ranges":"Step Ranges"
+      "fixed": "Fixed",
+      "recursive": "Recursive",
+      "rate_table": "Rate Table",
+      "absolute_range": "Absolute Range",
+      "step_ranges": "Step Ranges"
     },
     "policy": {
       "underwriting_new_transaction": "Underwriting: New transaction",
@@ -884,26 +886,26 @@
       "fee_rate": "Fee rate",
       "fee_amount": "Fee amount",
 
-      "import_schedule":"Import Schedule",
-      "from_csv_file":"From CSV File",
-      "from_another_policy":"From another policy",
-      "export_template":"Export template",
-      "upload_template":"Upload template",
-      "underwriting_policy_summary":"Underwriting:Policy Summary",
+      "import_schedule": "Import Schedule",
+      "from_csv_file": "From CSV File",
+      "from_another_policy": "From another policy",
+      "export_template": "Export template",
+      "upload_template": "Upload template",
+      "underwriting_policy_summary": "Underwriting:Policy Summary",
 
-      "client_dd_details":"Client DD details",
+      "client_dd_details": "Client DD details",
       "policy_taxes": "Policy taxes",
       "policy_clauses": "Policy clauses",
       "policy_subclasses_clauses": "Policy subclasses clauses",
       "policy_level_perils": "Policy level perils",
-      "policy_remarks":"Policy remarks",
-      "limits_of_liability":"Limits of liability",
+      "policy_remarks": "Policy remarks",
+      "limits_of_liability": "Limits of liability",
       "external_claim_exp": "External claims exp.",
       "internal_claim_exp": "Internal claims exp.",
       "service_providers": "Service providers",
       "reasons_for_pending": "Reasons for pending",
       "insureds": "Insureds",
-      "Name" : "Name",
+      "Name": "Name",
       "address": "Address",
       "town": "Town",
       "pin": "Pin",
