VQ-2447:Ability to View Related risk and Add and delete commission transaction

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -941,10 +941,55 @@
       "type": "类型",
       "required_documents": "所需文件",
       "submitted": "已提交",
-      "date-submitted": "提交日期",
+      "date_submitted": "提交日期",
       "ref_no": "参考号",
       "risk_note": "风险提示",
-      "uw_year": "核保年份"
+      "uw_year": "核保年份",
+
+      "select_risk_clauses": "选择风险条款",
+      "peril": "危险",
+      "limit_description": "限额描述",
+      "person_limit": "个人限额",
+      "claim_amount": "索赔金额",
+      "excess_type": "超额类型",
+      "peril_id": "ID",
+      "previous": "以前",
+    
+      "select_required_documents": "选择所需文件",
+      "edit_required_documents": "编辑所需文件",
+      "certificates": "证书",
+      "select_user_certifacte_iot": "选择用户证书批次",
+      "cert_no": "证书编号",
+      "lot_id": "批次ID",
+      "issue_date": "签发日期",
+      "cert_year": "证书年份",
+      "status": "状态",
+      "print_status": "打印状态",
+      "print_date": "打印日期",
+      "wef": "生效日期",
+      "select_certifiactes": "选择证书",
+      "cert_type": "证书类型",
+      "lots_id": "批次ID",
+      "certificate_details": "证书详情",
+      "certificate": "证书",
+      "active": "活跃",
+      "cancelled": "已取消",
+      "inactive": "不活跃",
+      "wet": "湿",
+      "remark": "备注",
+      "created_date": "创建日期",
+      "add_remarks": "添加备注",
+      "edit_remarks": "编辑备注",
+      "related_risks": "相关风险",
+      "property_id": "财产ID",
+      "commission_transaction": "佣金交易",
+      "agent_name": "代理名称",
+      "account_type": "账户类型",
+      "setup_rate": "设定费率",
+      "used_rate": "使用费率",
+      "commission_amount": "佣金金额",
+      "withholding_rate": "预扣率",
+       "code": "代码"
     }
   },
   "lms": {
