--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -960,7 +960,7 @@
       "type": "Type",
       "required_documents": "Required documents",
       "submitted": "Submitted",
-      "date-submitted": "Date Submitted",
+      "date_submitted": "Date Submitted",
       "ref_no": "Ref no.",
 
       "risk_note": "Risk note",
@@ -973,7 +973,43 @@
       "claim_amount": "Claim amount",
       "excess_type": "Excess type",
       "peril_id": "ID",
-      "previous": "Previous"
+      "previous": "Previous",
+
+      "select_required_documents": "Select Required Documents",
+      "edit_required_documents": "Edit required documents",
+      "certificates": "Certificates",
+      "select_user_certifacte_iot": "Select user certificate lot",
+      "cert_no":"Cert no",
+      "lot_id": "Lot ID ",
+      "issue_date": "Issue date",
+      "cert_year" : "Cert year",
+      "status": "Status",
+      "print_status": "Print status",
+      "print_date": "Print date",
+      "wef": "WEF",
+      "select_certifiactes": " Select certificates",
+      "cert_type": "Cert type",
+      "lots_id": "Lots ID",
+      "certificate_details": " Certificate details ",
+      "certificate": " Certificate ",
+      "active": "Active",
+      "cancelled":"Cancelled",
+      "inactive": "Inactive",
+      "wet": "WET",
+      "remark": "Remark",
+      "created_date": "Created date",
+      "add_remarks":"Add Remarks",
+      "edit_remarks": "Edit Remarks",
+      "related_risks": "Related risks",
+      "property_id": "Property ID",
+      "commission_transaction": "Commission transaction ",
+      "agent_name": "Agent name",
+      "account_type":"Account type",
+      "setup_rate":"Setup rate",
+      "used_rate": "Used rate",
+      "commission_amount": "Commission amount",
+      "withholding_rate": "Withholding rate",
+      "code": "Code"    
     }
   },
   "lms": {
