--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -942,10 +942,55 @@
     "type": "Tipo",
     "required_documents": "Documentos requeridos",
     "submitted": "Enviado",
-    "date-submitted": "Fecha de envío",
+    "date_submitted": "Fecha de envío",
     "ref_no": "Número de referencia",
     "risk_note": "Nota de riesgo",
-    "uw_year": "Año de suscripción"
+    "uw_year": "Año de suscripción",
+
+    "select_risk_clauses": "Seleccionar cláusulas de riesgo",
+  "peril": "Peligro",
+  "limit_description": "Descripción del límite",
+  "person_limit": "Límite por persona",
+  "claim_amount": "Monto del reclamo",
+  "excess_type": "Tipo de exceso",
+  "peril_id": "ID",
+  "previous": "Anterior",
+
+  "select_required_documents": "Seleccionar documentos requeridos",
+  "edit_required_documents": "Editar documentos requeridos",
+  "certificates": "Certificados",
+  "select_user_certifacte_iot": "Seleccionar lote de certificados de usuario",
+  "cert_no": "No. de certificado",
+  "lot_id": "ID del lote",
+  "issue_date": "Fecha de emisión",
+  "cert_year": "Año del certificado",
+  "status": "Estado",
+  "print_status": "Estado de impresión",
+  "print_date": "Fecha de impresión",
+  "wef": "Desde",
+  "select_certifiactes": "Seleccionar certificados",
+  "cert_type": "Tipo de certificado",
+  "lots_id": "ID de lotes",
+  "certificate_details": "Detalles del certificado",
+  "certificate": "Certificado",
+  "active": "Activo",
+  "cancelled": "Cancelado",
+  "inactive": "Inactivo",
+  "wet": "Húmedo",
+  "remark": "Observación",
+  "created_date": "Fecha de creación",
+  "add_remarks": "Agregar observaciones",
+  "edit_remarks": "Editar observaciones",
+  "related_risks": "Riesgos relacionados",
+  "property_id": "ID de la propiedad",
+  "commission_transaction": "Transacción de comisión",
+  "agent_name": "Nombre del agente",
+  "account_type": "Tipo de cuenta",
+  "setup_rate": "Tasa de configuración",
+  "used_rate": "Tasa utilizada",
+  "commission_amount": "Monto de la comisión",
+  "withholding_rate": "Tasa de retención",
+   "code": "Código"
     }
   },
   "lms": {
