--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -945,10 +945,55 @@
       "type": "Aina",
       "required_documents": "Hati zinazohitajika",
       "submitted": "Imewasilishwa",
-      "date-submitted": "Tarehe ya kuwasilishwa",
+      "date_submitted": "Tarehe ya kuwasilishwa",
       "ref_no": "Namba ya kumbukumbu",
         "risk_note": "Kipande cha hatari",
-    "uw_year": "Mwaka wa uhakiki"
+    "uw_year": "Mwaka wa uhakiki",
+
+    "select_risk_clauses": "Chagua vifungu vya hatari",
+  "peril": "Hatari",
+  "limit_description": "Maelezo ya kikomo",
+  "person_limit": "Kikomo cha mtu",
+  "claim_amount": "Kiasi cha dai",
+  "excess_type": "Aina ya ziada",
+  "peril_id": "ID",
+  "previous": "Ya awali",
+
+  "select_required_documents": "Chagua nyaraka zinazohitajika",
+  "edit_required_documents": "Hariri nyaraka zinazohitajika",
+  "certificates": "Vyeti",
+  "select_user_certifacte_iot": "Chagua cheti cha mtumiaji loti",
+  "cert_no": "Namba ya cheti",
+  "lot_id": "ID ya loti",
+  "issue_date": "Tarehe ya kutolewa",
+  "cert_year": "Mwaka wa cheti",
+  "status": "Hali",
+  "print_status": "Hali ya kuchapisha",
+  "print_date": "Tarehe ya kuchapisha",
+  "wef": "Tarehe ya kuanza",
+  "select_certifiactes": "Chagua vyeti",
+  "cert_type": "Aina ya cheti",
+  "lots_id": "ID za loti",
+  "certificate_details": "Maelezo ya cheti",
+  "certificate": "Cheti",
+  "active": "Inatumika",
+  "cancelled": "Imesitishwa",
+  "inactive": "Haifanyi kazi",
+  "wet": "Tarehe ya kumalizia",
+  "remark": "Maelezo",
+  "created_date": "Tarehe ya kuundwa",
+  "add_remarks": "Ongeza maelezo",
+  "edit_remarks": "Hariri maelezo",
+  "related_risks": "Hatari zinazohusiana",
+  "property_id": "ID ya mali",
+  "commission_transaction": "Muamala wa kamisheni",
+  "agent_name": "Jina la wakala",
+  "account_type": "Aina ya akaunti",
+  "setup_rate": "Kiwango cha usanikishaji",
+  "used_rate": "Kiwango kilichotumika",
+  "commission_amount": "Kiasi cha kamisheni",
+  "withholding_rate": "Kiwango cha kizuizi",
+   "code": "Nambari"
     }
   },
   "lms": {
