--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -942,10 +942,55 @@
     "type": "Typ",
     "required_documents": "Erforderliche Dokumente",
     "submitted": "Eingereicht",
-    "date-submitted": "Eingereichtes Datum",
+    "date_submitted": "Eingereichtes Datum",
     "ref_no": "Referenznummer",
      "risk_note": "Risikohinweis",
-    "uw_year": "Underwriting-Jahr"
+    "uw_year": "Underwriting-Jahr",
+
+    "select_risk_clauses": "Risikoklauseln auswählen",
+    "peril": "Gefahr",
+    "limit_description": "Grenzbeschreibung",
+    "person_limit": "Personengrenze",
+    "claim_amount": "Schadensbetrag",
+    "excess_type": "Selbstbehalttyp",
+    "peril_id": "ID",
+    "previous": "Vorherige",
+  
+    "select_required_documents": "Erforderliche Dokumente auswählen",
+    "edit_required_documents": "Erforderliche Dokumente bearbeiten",
+    "certificates": "Zertifikate",
+    "select_user_certifacte_iot": "Benutzerzertifikats-Lot auswählen",
+    "cert_no": "Zertifikatsnummer",
+    "lot_id": "Los-ID",
+    "issue_date": "Ausgabedatum",
+    "cert_year": "Zertifikatsjahr",
+    "status": "Status",
+    "print_status": "Druckstatus",
+    "print_date": "Druckdatum",
+    "wef": "Gültig ab",
+    "select_certifiactes": "Zertifikate auswählen",
+    "cert_type": "Zertifikatstyp",
+    "lots_id": "Los-ID",
+    "certificate_details": "Zertifikatsdetails",
+    "certificate": "Zertifikat",
+    "active": "Aktiv",
+    "cancelled": "Storniert",
+    "inactive": "Inaktiv",
+    "wet": "Nass",
+    "remark": "Bemerkung",
+    "created_date": "Erstellungsdatum",
+    "add_remarks": "Bemerkungen hinzufügen",
+    "edit_remarks": "Bemerkungen bearbeiten",
+    "related_risks": "Verwandte Risiken",
+    "property_id": "Eigentums-ID",
+    "commission_transaction": "Provisionsgeschäft",
+    "agent_name": "Agentenname",
+    "account_type": "Kontotyp",
+    "setup_rate": "Einrichtungsrate",
+    "used_rate": "Verwendete Rate",
+    "commission_amount": "Provisionsbetrag",
+    "withholding_rate": "Einbehaltungsrate",
+    "code": "Code"
     }
   },
   "lms": {
