--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -943,10 +943,55 @@
       "type": "Type",
       "required_documents": "Documents requis",
       "submitted": "Soumis",
-      "date-submitted": "Date de soumission",
+      "date_submitted": "Date de soumission",
       "ref_no": "Numéro de référence",
       "risk_note": "Note de risque",
-    "uw_year": "Année de souscription"
+    "uw_year": "Année de souscription",
+
+    "select_risk_clauses": "Sélectionner les clauses de risque",
+    "peril": "Péril",
+    "limit_description": "Description de la limite",
+    "person_limit": "Limite par personne",
+    "claim_amount": "Montant de la réclamation",
+    "excess_type": "Type de franchise",
+    "peril_id": "ID",
+    "previous": "Précédent",
+  
+    "select_required_documents": "Sélectionner les documents requis",
+    "edit_required_documents": "Modifier les documents requis",
+    "certificates": "Certificats",
+    "select_user_certifacte_iot": "Sélectionner le lot de certificats utilisateur",
+    "cert_no": "N° de certificat",
+    "lot_id": "ID du lot",
+    "issue_date": "Date d'émission",
+    "cert_year": "Année du certificat",
+    "status": "Statut",
+    "print_status": "Statut de l'impression",
+    "print_date": "Date d'impression",
+    "wef": "WEF",
+    "select_certifiactes": "Sélectionner les certificats",
+    "cert_type": "Type de certificat",
+    "lots_id": "ID des lots",
+    "certificate_details": "Détails du certificat",
+    "certificate": "Certificat",
+    "active": "Actif",
+    "cancelled": "Annulé",
+    "inactive": "Inactif",
+    "wet": "Mouillé",
+    "remark": "Remarque",
+    "created_date": "Date de création",
+    "add_remarks": "Ajouter des remarques",
+    "edit_remarks": "Modifier les remarques",
+    "related_risks": "Risques associés",
+    "property_id": "ID de la propriété",
+    "commission_transaction": "Transaction de commission",
+    "agent_name": "Nom de l'agent",
+    "account_type": "Type de compte",
+    "setup_rate": "Taux d'installation",
+    "used_rate": "Taux utilisé",
+    "commission_amount": "Montant de la commission",
+    "withholding_rate": "Taux de retenue",
+    "code": "Code"
     }
   },
   "lms": {
