VQ-2174, VQ-2180/API consumption, multilingual

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1046,7 +1046,55 @@
       "within_system": "Within System",
       "outside_system": "Outside System"
     },
-    "grp": {}
+    "grp": {
+      "claims": {
+        "claim_initiation": "Claim initiation",
+        "select_a_product": "Select a product",
+        "select_a_policy": "Select a policy",
+        "select_a_policy_member": "Select a policy member",
+        "select_a_causation_type": "Select a causation type",
+        "select_the_actual_cause": "Select the actual cause",
+        "select_an_option": "Select an option",
+        "add_causation": "Add causation",
+        "causation_id": "Causation Id",
+        "causation_description": "Causation description",
+        "gender": "Gender",
+        "male": "Male",
+        "female": "Female",
+        "both": "Both",
+        "minimum_claimable_months": "Minimum claimable months",
+        "add_actual_type": "Add actual type",
+        "claim_report_date": "Claim report date",
+        "incident_occurence_date": "Incident occurence date",
+        "location_of_incident": "Location of incident",
+        "upload_documents": "Upload documents",
+        "book_claim": "Book claim",
+        "claim_information": "Claim information",
+        "product": "Product",
+        "cause_type": "Causation type",
+        "incident_location": "Incident location",
+        "policy": "Policy",
+        "causation_cause": "Causation cause",
+        "policy_member": "Policy member",
+        "death_date": "Death date",
+        "documents": "documents",
+        "admit_claim": "Admit claim",
+        "acknowledgement_letter": "Acknowledgement letter",
+        "share": "Share",
+        "process_claim": "Process claim",
+        "acknowledgement_details": "Acknowledgement details",
+        "actual_cause": "Actual cause",
+        "claim_initialization_date": "Claim initialization date",
+        "share_acknowledgement_letter": "Share acknowledgement letter",
+        "select_sharing_method": "Select sharing method",
+        "email": "Email",
+        "sms": "SMS",
+        "whatsapp": "Whatsapp",
+        "enter_email_address": "Enter email address",
+        "enter_phone_number": "Enter phone number",
+        "enter_whatsapp_number": "Enter whatsapp number"
+      }
+    }
   },
 
   "report": {
