--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1019,7 +1019,55 @@
       "upload_documents": "Subir documentos",
       "yes": "Sí"
     },
-    "grp": {}
+    "grp": {
+      "claims": {
+        "claim_initiation": "Inicio de reclamación",
+      "select_a_product": "Seleccionar un producto",
+      "select_a_policy": "Seleccionar una póliza",
+      "select_a_policy_member": "Seleccionar un miembro de la póliza",
+      "select_a_causation_type": "Seleccionar un tipo de causación",
+      "select_the_actual_cause": "Seleccionar la causa real",
+      "select_an_option": "Seleccionar una opción",
+      "add_causation": "Añadir causación",
+      "causation_id": "ID de causación",
+      "causation_description": "Descripción de la causación",
+      "gender": "Género",
+      "male": "Masculino",
+      "female": "Femenino",
+      "both": "Ambos",
+      "minimum_claimable_months": "Meses mínimos reclamables",
+      "add_actual_type": "Añadir tipo real",
+      "claim_report_date": "Fecha del informe de reclamación",
+      "incident_occurrence_date": "Fecha de ocurrencia del incidente",
+      "location_of_incident": "Ubicación del incidente",
+      "upload_documents": "Subir documentos",
+      "book_claim": "Reservar reclamación",
+      "claim_information": "Información de la reclamación",
+      "product": "Producto",
+      "cause_type": "Tipo de causa",
+      "incident_location": "Ubicación del incidente",
+      "policy": "Póliza",
+      "causation_cause": "Causa de la causa",
+      "policy_member": "Miembro de la póliza",
+      "death_date": "Fecha de fallecimiento",
+      "documents": "Documentos",
+      "admit_claim": "Aceptar reclamación",
+      "acknowledgement_letter": "Carta de acuse de recibo",
+      "share": "Compartir",
+      "process_claim": "Procesar reclamación",
+      "acknowledgement_details": "Detalles del acuse de recibo",
+      "actual_cause": "Causa real",
+      "claim_initialization_date": "Fecha de inicio de la reclamación",
+      "share_acknowledgement_letter": "Compartir carta de acuse de recibo",
+      "select_sharing_method": "Seleccionar método de compartición",
+      "email": "Correo electrónico",
+      "sms": "SMS",
+      "whatsapp": "Whatsapp",
+      "enter_email_address": "Ingresar dirección de correo electrónico",
+      "enter_phone_number": "Ingresar número de teléfono",
+      "enter_whatsapp_number": "Ingresar número de Whatsapp"
+      }
+    }
   },
   "report": {
     "action": "Acción",
