--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1020,7 +1020,55 @@
       "upload_documents": "Télécharger des documents",
       "yes": "Oui"
     },
-    "grp": {}
+    "grp": {
+      "claims": {
+        "claim_initiation": "Début de la réclamation",
+      "select_a_product": "Sélectionner un produit",
+      "select_a_policy": "Sélectionner une police",
+      "select_a_policy_member": "Sélectionner un membre de la police",
+      "select_a_causation_type": "Sélectionner un type de causation",
+      "select_the_actual_cause": "Sélectionner la cause réelle",
+      "select_an_option": "Sélectionner une option",
+      "add_causation": "Ajouter une causation",
+      "causation_id": "ID de causation",
+      "causation_description": "Description de la causation",
+      "gender": "Genre",
+      "male": "Homme",
+      "female": "Femme",
+      "both": "Les deux",
+      "minimum_claimable_months": "Nombre minimum de mois réclamables",
+      "add_actual_type": "Ajouter un type réel",
+      "claim_report_date": "Date du rapport de réclamation",
+      "incident_occurrence_date": "Date de survenue de l'incident",
+      "location_of_incident": "Lieu de l'incident",
+      "upload_documents": "Télécharger des documents",
+      "book_claim": "Réserver une réclamation",
+      "claim_information": "Informations sur la réclamation",
+      "product": "Produit",
+      "cause_type": "Type de cause",
+      "incident_location": "Lieu de l'incident",
+      "policy": "Police",
+      "causation_cause": "Cause de la causalité",
+      "policy_member": "Membre de la police",
+      "death_date": "Date de décès",
+      "documents": "Documents",
+      "admit_claim": "Admettre la réclamation",
+      "acknowledgement_letter": "Lettre d'accusé de réception",
+      "share": "Partager",
+      "process_claim": "Traiter la réclamation",
+      "acknowledgement_details": "Détails de l'accusé de réception",
+      "actual_cause": "Cause réelle",
+      "claim_initialization_date": "Date d'initialisation de la réclamation",
+      "share_acknowledgement_letter": "Partager la lettre d'accusé de réception",
+      "select_sharing_method": "Sélectionner le mode de partage",
+      "email": "Email",
+      "sms": "SMS",
+      "whatsapp": "Whatsapp",
+      "enter_email_address": "Saisir l'adresse email",
+      "enter_phone_number": "Saisir le numéro de téléphone",
+      "enter_whatsapp_number": "Saisir le numéro Whatsapp"
+      }
+    }
   },
   "report": {
     "action": "Action",
