--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -556,7 +556,14 @@
     "withholding_tax_applicable_required": "Ushuru wa Kutoza Unavyoweza Kutumika ni lazima",
     "withholding_tax_required": "Ushuru wa Kutoza ni lazima",
     "yes": "Ndio",
-    "zero": "Sifuri"
+    "zero": "Sifuri",
+    "quotation_no": "Nambari ya nukuu",
+    "client_name": "Jina la mteja",
+    "sum_insured": "Kiasi cha bima",
+    "date_created": "Tarehe ya kuundwa",
+    "action": "Kitendo",
+    "policy_no": "Nambari ya sera",
+    "claim_no": "Nambari ya madai"
   },
   "gis": {
     "quotation": {
@@ -719,7 +726,6 @@
       "rate_table": "Jedwali la Viwango",
       "absolute_range": "Kiwango Kamili",
       "step_ranges": "Viwanja vya Hatua"
-
     },
     "policy": {
       "underwriting_new_transaction": "Uwekaji wa Saini: Biashara Mpya",
@@ -1003,28 +1009,28 @@
   "lms": {
     "common": {},
     "ind": {
-        "causation_cause": "Sababu ya kisa",
-        "causation_type": "Aina ya kisa",
-        "choose_file": "Chagua faili",
-        "claims": "Madai",
-        "claim_details": "Maelezo ya madai",
-        "claim_on_life": "Madai ya maisha",
-        "claim_type": "Aina ya madai",
-        "client_details": "Maelezo ya mteja",
-        "date_reported": "Tarehe iliyoripotiwa",
-        "death_certificate": "Cheti cha kifo",
-        "document_c": "Hati C",
-        "document_d": "Hati D",
-        "incident_date": "Tarehe ya tukio",
-        "incident_location": "Mahali pa tukio",
-        "incubation_period": "Override Kipindi cha incubation",
-        "national_identification": "Kitambulisho cha taifa",
-        "no": "Hapana",
-        "policy": "Sera",
-        "proceed": "Endelea",
-        "select_an_option": "Chagua chaguo",
-        "upload_documents": "Pakia hati",
-        "yes": "Ndio"
+      "causation_cause": "Sababu ya kisa",
+      "causation_type": "Aina ya kisa",
+      "choose_file": "Chagua faili",
+      "claims": "Madai",
+      "claim_details": "Maelezo ya madai",
+      "claim_on_life": "Madai ya maisha",
+      "claim_type": "Aina ya madai",
+      "client_details": "Maelezo ya mteja",
+      "date_reported": "Tarehe iliyoripotiwa",
+      "death_certificate": "Cheti cha kifo",
+      "document_c": "Hati C",
+      "document_d": "Hati D",
+      "incident_date": "Tarehe ya tukio",
+      "incident_location": "Mahali pa tukio",
+      "incubation_period": "Override Kipindi cha incubation",
+      "national_identification": "Kitambulisho cha taifa",
+      "no": "Hapana",
+      "policy": "Sera",
+      "proceed": "Endelea",
+      "select_an_option": "Chagua chaguo",
+      "upload_documents": "Pakia hati",
+      "yes": "Ndio"
     },
     "grp": {}
   },
