--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -556,7 +556,14 @@
     "withholding_tax_applicable_required": "Quellensteuerpflichtig ist erforderlich",
     "withholding_tax_required": "Quellensteuer ist erforderlich",
     "yes": "Ja",
-    "zero": "Null"
+    "zero": "Null",
+    "quotation_no": "Angebotsnummer",
+    "client_name": "Kundenname",
+    "sum_insured": "Versicherungssumme",
+    "date_created": "Erstellungsdatum",
+    "action": "Aktion",
+    "policy_no": "Policennummer",
+    "claim_no": "Schadensnummer"
   },
   "gis": {
     "quotation": {
@@ -959,7 +966,7 @@
     "excess_type": "Selbstbehalttyp",
     "peril_id": "ID",
     "previous": "Vorherige",
-  
+
     "select_required_documents": "Erforderliche Dokumente auswählen",
     "edit_required_documents": "Erforderliche Dokumente bearbeiten",
     "certificates": "Zertifikate",
@@ -1000,28 +1007,28 @@
   "lms": {
     "common": {},
     "ind": {
-        "causation_cause": "Ursachenzusammenhang",
-        "causation_type": "Ursachentyp",
-        "choose_file": "Datei auswählen",
-        "claims": "Ansprüche",
-        "claim_details": "Anspruchsdetails",
-        "claim_on_life": "Lebensanspruch",
-        "claim_type": "Anspruchstyp",
-        "client_details": "Kundendetails",
-        "date_reported": "Meldedatum",
-        "death_certificate": "Sterbeurkunde",
-        "document_c": "Dokument C",
-        "document_d": "Dokument D",
-        "incident_date": "Vorfallsdatum",
-        "incident_location": "Vorfallsort",
-        "incubation_period": "Inkubationszeit überschreiben",
-        "national_identification": "Nationale Identifikation",
-        "no": "Nein",
-        "policy": "Richtlinie",
-        "proceed": "Fortfahren",
-        "select_an_option": "Option auswählen",
-        "upload_documents": "Dokumente hochladen",
-        "yes": "Ja"
+      "causation_cause": "Ursachenzusammenhang",
+      "causation_type": "Ursachentyp",
+      "choose_file": "Datei auswählen",
+      "claims": "Ansprüche",
+      "claim_details": "Anspruchsdetails",
+      "claim_on_life": "Lebensanspruch",
+      "claim_type": "Anspruchstyp",
+      "client_details": "Kundendetails",
+      "date_reported": "Meldedatum",
+      "death_certificate": "Sterbeurkunde",
+      "document_c": "Dokument C",
+      "document_d": "Dokument D",
+      "incident_date": "Vorfallsdatum",
+      "incident_location": "Vorfallsort",
+      "incubation_period": "Inkubationszeit überschreiben",
+      "national_identification": "Nationale Identifikation",
+      "no": "Nein",
+      "policy": "Richtlinie",
+      "proceed": "Fortfahren",
+      "select_an_option": "Option auswählen",
+      "upload_documents": "Dokumente hochladen",
+      "yes": "Ja"
     },
     "grp": {}
   },
