Ability to add risk peril

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1029,7 +1029,8 @@
       "used_rate": "Used rate",
       "commission_amount": "Commission amount",
       "withholding_rate": "Withholding rate",
-      "code": "Code"
+      "code": "Code",
+      "select_risk_peril":"Select Risk Peril" 
     }
   },
   "lms": {
